--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<title>John Smith | Vet Stories</title>
-		<link rel="stylesheet" href="import.css" media="all">
+		<link rel="stylesheet" href="stylesheets/import.css" media="all">
 		<link rel="prefetch" href="/images/icons/combined.svg">
 	</head>
 	<body class="flex row wrap">
@@ -20,8 +20,13 @@
 				<button type="submit" data-icon="L"></button>
 			</form>
 		</header>
-		<main class="flex row wrap" itemprop="mainContentofPage" itemscope itemscope="https://schema.org/Blog">
-			<article itemprop="text">
+		<main class="flex row" itemprop="mainContentofPage" itemscope itemscope="https://schema.org/Blog">
+			<aside>
+				<a href="#">Link 1</a>
+				<a href="#">Link 2</a>
+				<a href="#">Link 3</a>
+			</aside>
+			<article itemprop="text" class="flex column">
 				<header>
 					<h2>
 						<img src="https://lh3.googleusercontent.com/-Dp_ELbizyUA/AAAAAAAAAAI/AAAAAAAAtY0/v84MAms703I/s46-c-k-no/photo.jpg"/>
@@ -30,24 +35,24 @@
 				</header>
 				<section id="chapter-1">
 					<nav>
-						<a href="#chapter-1" rel="prev" data-icon="<"></a>
-						<a href="#chapter-2" rel="next" data-icon=">"></a>
+						<a href="#chapter-1" rel="prev"></a>
+						<a href="#chapter-2" rel="next"></a>
 					</nav>
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 					<p>Pellentesque nec ipsum sed turpis mattis interdum eu a enim. Etiam orci lorem, vehicula id ullamcorper a, sagittis ut dui. Fusce vitae metus a ipsum posuere consequat. Suspendisse eget leo quis orci tempor efficitur quis sed lectus. Vivamus a ex nisi. Maecenas vitae neque nec metus pellentesque pharetra. Mauris in tortor sapien. Pellentesque congue libero mauris, eu tempus eros varius vitae. Pellentesque eu viverra magna. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Phasellus vitae ligula congue elit semper imperdiet gravida tincidunt sem. </p>
 				</section>
 				<section id="chapter-2">
 					<nav>
-						<a href="#chapter-1" rel="prev" data-icon="<"></a>
-						<a href="#chapter-3" rel="next" data-icon=">"></a>
+						<a href="#chapter-1" rel="prev"></a>
+						<a href="#chapter-3" rel="next"></a>
 					</nav>
 					<p>Quisque euismod turpis et purus fermentum, porttitor hendrerit dui ultricies. Integer dolor ante, ultricies vel lacinia ac, interdum eu metus. In hac habitasse platea dictumst. Quisque consequat sollicitudin magna, vitae condimentum tortor rutrum id. Duis ac enim tincidunt, fermentum neque ac, egestas lorem. Pellentesque fermentum nisl eu ligula sollicitudin pulvinar. Ut porta, diam ut iaculis efficitur, nulla libero scelerisque justo, eget consequat eros elit id tortor. Quisque dolor risus, feugiat a laoreet sit amet, aliquet iaculis neque. Cras id sem ut diam dictum dapibus sed eu est. Fusce neque justo, rhoncus in accumsan ac, euismod quis odio. In congue ipsum ut nisi sollicitudin, sit amet bibendum justo volutpat. Mauris tempor vulputate eros. Fusce a tempus felis.</p>
 					<p>Mauris ullamcorper a libero ut lobortis. In scelerisque sit amet nulla eu volutpat. Ut aliquet ligula sit amet velit lobortis, interdum ultricies erat ullamcorper. Fusce sed tristique massa. Phasellus interdum nulla sed molestie sagittis. Fusce semper mauris tellus, nec pharetra nisl gravida at. Vivamus suscipit facilisis massa ac porttitor. Ut egestas, nisi in lobortis semper, nulla dolor venenatis lorem, vitae hendrerit velit augue a ipsum. Aliquam sodales neque ante, id laoreet metus bibendum id. </p>
 				</section>
 				<section id="chapter-3">
 					<nav>
-						<a href="#chapter-2" rel="prev" data-icon="<"></a>
-						<a href="#chapter-3" rel="next" data-icon=">"></a>
+						<a href="#chapter-2" rel="prev"></a>
+						<a href="#chapter-3" rel="next"></a>
 					</nav>
 					<p>Fusce ut sapien at risus condimentum gravida. Aliquam nisi tellus, convallis tincidunt molestie sed, lobortis ut risus. Duis vel magna vel enim molestie pellentesque ullamcorper non metus. Suspendisse pharetra ornare nisl in tempor. Duis mattis odio id sagittis varius. Aenean rutrum tortor ut erat fringilla, eget fringilla nunc dictum. Proin luctus nisl augue, id scelerisque dolor ornare at. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Praesent scelerisque ipsum eget augue interdum, et lobortis lorem feugiat. Fusce in neque nulla. Vestibulum cursus, risus sit amet varius semper, sem sem elementum metus, sit amet dignissim libero tellus eget lectus. Sed mi elit, venenatis sed semper eget, lacinia sit amet tellus. Quisque nec est ut augue sollicitudin efficitur. Vivamus fringilla scelerisque metus eget dignissim. </p>
 					<p>Duis finibus, urna ac rutrum elementum, nisi risus tincidunt justo, eget dignissim arcu nisi sit amet lorem. Aliquam porta tortor quis nibh sagittis, molestie elementum velit malesuada. Mauris sed sem a nisl fringilla placerat. Nulla porta lectus massa, nec tristique felis semper non. Donec pellentesque aliquam nulla sed lobortis. Etiam orci enim, placerat in magna non, lobortis congue lorem. Sed blandit vel massa eget dapibus. </p>
