--- a/index.html
+++ b/index.html
@@ -21,11 +21,6 @@
 			</form>
 		</header>
 		<main class="flex row" itemprop="mainContentofPage" itemscope itemscope="https://schema.org/Blog">
-			<aside>
-				<a href="#">Link 1</a>
-				<a href="#">Link 2</a>
-				<a href="#">Link 3</a>
-			</aside>
 			<article itemprop="text" class="flex column">
 				<header>
 					<h2>
@@ -52,15 +47,27 @@
 				<section id="chapter-3">
 					<nav>
 						<a href="#chapter-2" rel="prev"></a>
-						<a href="#chapter-3" rel="next"></a>
+						<a href="#chapter-4" rel="next"></a>
 					</nav>
 					<p>Fusce ut sapien at risus condimentum gravida. Aliquam nisi tellus, convallis tincidunt molestie sed, lobortis ut risus. Duis vel magna vel enim molestie pellentesque ullamcorper non metus. Suspendisse pharetra ornare nisl in tempor. Duis mattis odio id sagittis varius. Aenean rutrum tortor ut erat fringilla, eget fringilla nunc dictum. Proin luctus nisl augue, id scelerisque dolor ornare at. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Praesent scelerisque ipsum eget augue interdum, et lobortis lorem feugiat. Fusce in neque nulla. Vestibulum cursus, risus sit amet varius semper, sem sem elementum metus, sit amet dignissim libero tellus eget lectus. Sed mi elit, venenatis sed semper eget, lacinia sit amet tellus. Quisque nec est ut augue sollicitudin efficitur. Vivamus fringilla scelerisque metus eget dignissim. </p>
 					<p>Duis finibus, urna ac rutrum elementum, nisi risus tincidunt justo, eget dignissim arcu nisi sit amet lorem. Aliquam porta tortor quis nibh sagittis, molestie elementum velit malesuada. Mauris sed sem a nisl fringilla placerat. Nulla porta lectus massa, nec tristique felis semper non. Donec pellentesque aliquam nulla sed lobortis. Etiam orci enim, placerat in magna non, lobortis congue lorem. Sed blandit vel massa eget dapibus. </p>
+				</section>
+				<section id="chapter-4">
+					<nav>
+						<a href="#chapter-3" rel="prev"></a>
+						<a href="#chapter-4" rel="next"></a>
+					</nav>
+					<p>Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. In euismod ultrices facilisis. Vestibulum porta sapien adipiscing augue congue id pretium lectus molestie. Proin quis dictum nisl. Morbi id quam sapien, sed vestibulum sem. Duis elementum rutrum mauris sed convallis. Proin vestibulum magna mi. Aenean tristique hendrerit magna, ac facilisis nulla hendrerit ut. Sed non tortor sodales quam auctor elementum. Donec hendrerit nunc eget elit pharetra pulvinar. Suspendisse id tempus tortor.</p>
 				</section>
 				<footer>
 					<a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/"><img alt="Creative Commons License" src="https://i.creativecommons.org/l/by-nc-sa/4.0/88x31.png" /></a><br /><span xmlns:dct="http://purl.org/dc/terms/" href="http://purl.org/dc/dcmitype/Text" property="dct:title" rel="dct:type">My Story</span> by <span xmlns:cc="http://creativecommons.org/ns#" property="cc:attributionName" rel="author">John Smith</span> is licensed under a <a rel="license" itemprop="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/">Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License</a>.
 				</footer>
 			</article>
+			<aside>
+				<a href="#">Link 1</a>
+				<a href="#">Link 2</a>
+				<a href="#">Link 3</a>
+			</aside>
 		</main>
 		<footer>
 			<nav>
