Added GitHub & email links to footer
For contact purposes

--- a/index.html
+++ b/index.html
@@ -86,6 +86,12 @@
 				<a href="#">
 					<svg class="logo"><use xlink:href="/images/icons/combined.svg#Google_plus"></use></svg>
 				</a>
+				<a href="https://github.com/shgysk8zer0/vet-stories" target="_blank">
+					<svg class="logo"><use xlink:href="/images/icons/combined.svg#mark-github"></svg>
+				</a>
+				<a href="mailto:shgysk8zer0@gmail.com" target="_blank">
+					<svg class="logo"><use xlink:href="/images/icons/combined.svg#mail"></use></svg>
+				</a>
 			</nav>
 		</footer>
 	</body>
