--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 	<head>
 		<meta charset="utf-8">
 		<title>John Smith | Vet Stories</title>
-		<link rel="stylesheet" href="stylesheets/import.css" media="all">
-		<link rel="prefetch" href="/images/combined.svg">
+		<link rel="stylesheet" href="stylesheets/css/import.css" media="all">
+		<link rel="prefetch" href="images/combined.svg">
 		<script type="application/javascript" src="scripts/custom.js" async defer></script>
 	</head>
 	<body class="flex row wrap">
@@ -15,7 +15,7 @@
 			</nav>
 			<form name="search" action="#" method="get">
 				<label for="search">
-					<svg width="20" height="20" class="icon currentColor"><use xlink:href="/images/combined.svg#people"></svg>
+					<svg width="20" height="20" class="icon currentColor"><use xlink:href="images/combined.svg#people"></svg>
 				</label>
 				<input type="search" name="search" id="search" autofocus="" required=""/>
 				<button type="submit" data-icon="L"></button>
@@ -76,22 +76,22 @@
 				<a href="#">Some other link</a>
 				<br />
 				<a href="#">
-					<svg class="logo"><use xlink:href="/images/combined.svg#Facebook"></use></svg>
+					<svg class="logo"><use xlink:href="images/combined.svg#Facebook"></use></svg>
 				</a>
 				<a href="#">
-					<svg class="logo"><use xlink:href="/images/combined.svg#twitter"></use></svg>
+					<svg class="logo"><use xlink:href="images/combined.svg#twitter"></use></svg>
 				</a>
 				<a href="#">
-					<svg class="logo"><use xlink:href="/images/combined.svg#YouTube"></use></svg>
+					<svg class="logo"><use xlink:href="images/combined.svg#YouTube"></use></svg>
 				</a>
 				<a href="#">
-					<svg class="logo"><use xlink:href="/images/combined.svg#Google_plus"></use></svg>
+					<svg class="logo"><use xlink:href="images/combined.svg#Google_plus"></use></svg>
 				</a>
 				<a href="https://github.com/shgysk8zer0/vet-stories" target="_blank">
-					<svg class="logo"><use xlink:href="/images/combined.svg#mark-github"></svg>
+					<svg class="logo"><use xlink:href="images/combined.svg#mark-github"></svg>
 				</a>
 				<a href="mailto:shgysk8zer0@gmail.com" target="_blank">
-					<svg class="logo"><use xlink:href="/images/combined.svg#mail"></use></svg>
+					<svg class="logo"><use xlink:href="images/combined.svg#mail"></use></svg>
 				</a>
 			</nav>
 		</footer>
