Update HTML to be more bare-bones
* Remove article, aside, and footer content.
* Make title more basic (no mention of author or story title).
* Misc updates.

--- a/index.html
+++ b/index.html
@@ -2,57 +2,27 @@
 <html lang="en" itemscope itemtype="http://schema.org/WebPage">
 	<head>
 		<meta charset="utf-8">
-		<title>John Smith | Vet Stories</title>
+		<title>Vet Stories</title>
 		<link rel="stylesheet" href="stylesheets/css/import.css" media="all">
 		<link rel="prefetch" href="images/combined.svg">
+		<link rel="prefetch" href="links.json">
 		<script type="application/javascript" src="scripts/custom.js" async defer></script>
 	</head>
 	<body class="flex row wrap">
 		<header>
 			<h1 class="center">Vet Stories</h1>
-			<nav>
-
-			</nav>
+			<nav></nav>
 			<form name="search" action="#" method="get">
-				<label for="search">
-					<svg width="20" height="20" class="icon currentColor"><use xlink:href="images/combined.svg#people"></svg>
-				</label>
+				<label for="search" data-icon="U"></label>
 				<input type="search" name="search" id="search" autofocus="" required=""/>
 				<button type="submit" data-icon="L"></button>
 			</form>
 		</header>
-		<main class="flex row" itemprop="mainContentofPage" itemscope itemscope="https://schema.org/Blog">
+		<main class="flex row" itemprop="mainContentofPage" itemscope="https://schema.org/Blog">
 			<article itemprop="text" class="flex column"></article>
-			<aside>
-				<a href="#">Link 1</a>
-				<a href="#">Link 2</a>
-				<a href="#">Link 3</a>
-			</aside>
+			<aside></aside>
 		</main>
 		<footer>
-			<nav>
-				<a href="http://www.honorflight.org/">Honor Flight Network</a>
-				<a href="#">Some other link</a>
-				<br />
-				<a href="#">
-					<svg class="logo"><use xlink:href="images/combined.svg#Facebook"></use></svg>
-				</a>
-				<a href="#">
-					<svg class="logo"><use xlink:href="images/combined.svg#twitter"></use></svg>
-				</a>
-				<a href="#">
-					<svg class="logo"><use xlink:href="images/combined.svg#YouTube"></use></svg>
-				</a>
-				<a href="#">
-					<svg class="logo"><use xlink:href="images/combined.svg#Google_plus"></use></svg>
-				</a>
-				<a href="https://github.com/shgysk8zer0/vet-stories" target="_blank">
-					<svg class="logo"><use xlink:href="images/combined.svg#mark-github"></svg>
-				</a>
-				<a href="mailto:shgysk8zer0@gmail.com" target="_blank">
-					<svg class="logo"><use xlink:href="images/combined.svg#mail"></use></svg>
-				</a>
-			</nav>
 		</footer>
 	</body>
 </html>
